--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Holly Niquette's Portfolio</title>
     <meta name="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <header>
-    <h1>Holly Niquette</h1>
-
     <nav>
+      <h1>Holly Niquette</h1>
       <ul>
         <li><a href="#about">About Me</a></li>
         <li><a href="#work">Work</a></li>
