fixed rows and started styling body

--- a/index.html
+++ b/index.html
@@ -14,52 +14,56 @@
   <div class="container">
     <header>
       <nav>
-        <h1>Holly Niquette</h1>
+        <h1><a href="#">Holly Niquette</a></h1>
         <ul>
           <li><a href="#about">About Me</a></li>
           <li><a href="#work">Work</a></li>
+          <li><a href="#resume">Resume</a></li>
           <li><a href="#links">Links</a></li>
         </ul>
       </nav>
     </header>
 
     <body>
-      <div class="sidebar">
-        <h2 class="sidebar-about-me">About Me</h2>
-        <h2 class="sidebar-work">Work</h2>
-        <h2 class="sidebar-links">Links</h2>
-      </div>
-      <div class="main">
-        <section id="about">
-          <p>kjlhun.kjnlkbljkhblhj</p>
-          <img
-            src="./Assets/murphy-01.jpg"
-            alt="Murphy 2"
-            width="300"
-            height="300"
-          />
-        </section>
-        <section id="work">
-          <img
-            src="./Assets/murphy-02.jpg"
-            alt="Murphy 2"
-            width="300"
-            height="300"
-          />
-          <img
-            src="./Assets/murphy-03.jpg"
-            alt="Murphy 3"
-            width="300"
-            height="300"
-          />
-        </section>
-        <section id="links">
-          <ul>
-            <li>Resume</li>
-            <li><a href="mailto:hollyniquette@gmail.com">Email</a></li>
-          </ul>
-        </section>
-      </div>
+      <h2 class="sidebar-about-me">About Me</h2>
+      <h2 class="sidebar-work">Work</h2>
+      <h2 class="sidebar-resume">Resume</h2>
+      <h2 class="sidebar-links">Links</h2>
+      <section class="main-about-me">
+        <img
+          class="main-about-me-img"
+          src="./Assets/murphy-01.jpg"
+          alt="Murphy 2"
+          width="300"
+          height="300"
+        />
+        <p class="main-about-me-text">
+          kjlhun.kjnlk bljkhblhjkjnlkbljkhbl hjkjnlkbljkhblhjkjnlkbljkh
+          blhjkjnlkbljkhblhjkjn lkbljkhblhjkjnlk bljkhblhjkjnlkbl
+          jkhblhjkjnlkbljkh blhjkjnlkbljkhblhjkjnlkbljkhblhjkjnlk
+          bljkhblhjkjnlkbljkhblhjkjnlkbljkhblhj
+        </p>
+      </section>
+      <section class="main-work">
+        <img
+          src="./Assets/murphy-02.jpg"
+          alt="Murphy 2"
+          width="300"
+          height="300"
+        />
+        <img
+          src="./Assets/murphy-03.jpg"
+          alt="Murphy 3"
+          width="300"
+          height="300"
+        />
+      </section>
+      <section class="main-links">
+        <ul>
+          <li>Resume</li>
+          <li><a href="mailto:hollyniquette@gmail.com">Email</a></li>
+        </ul>
+      </section>
     </body>
   </div>
 </html>
