more responsive stuff and padding

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </header>
 
     <body>
-      <h2 class="sidebar-about-me">About Me</h2>
-      <h2 class="sidebar-work">Work</h2>
-      <h2 class="sidebar-resume">Resume</h2>
-      <h2 class="sidebar-links">Links</h2>
+      <h2 id="about" class="sidebar-about-me">About Me</h2>
+      <h2 id="work" class="sidebar-work">Work</h2>
+      <h2 id="resume" class="sidebar-resume">Resume</h2>
+      <h2 id="links" class="sidebar-links">Links</h2>
       <section class="main-about-me">
         <img
           class="main-about-me-img"
@@ -38,10 +38,20 @@
           height="300"
         />
         <p class="main-about-me-text">
-          kjlhun.kjnlk bljkhblhjkjnlkbljkhbl hjkjnlkbljkhblhjkjnlkbljkh
-          blhjkjnlkbljkhblhjkjn lkbljkhblhjkjnlk bljkhblhjkjnlkbl
-          jkhblhjkjnlkbljkh blhjkjnlkbljkhblhjkjnlkbljkhblhjkjnlk
-          bljkhblhjkjnlkbljkhblhjkjnlkbljkhblhj
+          As a brand new front end engineer, I am excited to embark on a journey
+          of growth and learning in the field of web development. With a degree
+          in graphic design, I am already skilled in user experience, and am
+          eager to bring my skills and enthusiasm to a future team of
+          developers. What I lack in experience, I make up for in curiosity and
+          a willingness to take on new challenges. As a female engineer, I am
+          also passionate about promoting diversity and inclusivity in tech. I
+          believe that bringing more women into the field will not only make
+          tech more equitable and accessible, but also lead to more innovative
+          and creative solutions. Outside of work, I enjoy spending time with my
+          boyfriend Joe and my dog Murphy, exploring new technologies, and
+          watching The Challenge. I hope to someday join a team of like-minded
+          professionals who share my passion for technology, design, and making
+          a positive impact on the world.
         </p>
       </section>
       <section class="main-work">
@@ -60,7 +70,7 @@
       </section>
       <section class="main-links">
         <ul>
-          <li>Resume</li>
+          <li>LinkedIn</li>
           <li><a href="mailto:hollyniquette@gmail.com">Email</a></li>
         </ul>
       </section>
